--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,14 +6,21 @@ name: Node.js CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'todo-frontend/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'todo-frontend/**'
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: todo-frontend
+        
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
@@ -26,6 +33,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        cache-dependency-path: todo-frontend/package-lock.json
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run tests
+      run: npm test
